@@ -4,6 +4,7 @@
 - Full support JSON.GET/JSON.SET commands
 - Basic support RediSearch, redis-graph types 
 - Json keys validation
+- MGET command UI handling
 
 1.9.1 / November 4, 2017
 [Alexandr Topilski]
